# manta

./: LICENSE  README.md
control/joy_map/: CMakeLists.txt  package.xml
control/joystick_interface/: README.md  package.xml
control/pwm_interface/: CMakeLists.txt
control/thruster_interface/: package.xml
joy_map/scripts/: joytest.py
manta_msgs/: CMakeLists.txt  package.xml
manta_msgs/msg/: Propulsion.msg  Pwm.msg
properties/config/environment/: trondheim_freshwater.yaml  trondheim_saltwater.yaml
properties/config/robot/: manta_param.yaml
rov_control/pwm_interface/: package.xml
rov_control/thruster_interface/: CMakeLists.txt
rov_setup/: CMakeLists.txt  package.xml
shouter/: CMakeLists.txt
shouter/scripts/: shouter.py
test/shouter/: package.xml
thruster_interface/scripts/: thruster_interface_node.py
