<?xml version="1.0"?>
<package>

  <name>joystick_interface</name>
  <version>0.1.0</version>
  <description>Read and process joystick input to interact with the system</description>
  <maintainer email="borgepahlm@gmail.com">Børge Pahlm</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>vortex_msgs</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>vortex_msgs</run_depend>
</package>
